// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InlineMessage should render with higligthed background 1`] = `
<div
  className="tc-inline-message theme-tc-inline-message"
>
  <span
    className="tc-inline-message-icon theme-tc-inline-message-icon success theme-success"
  >
    <svg
      aria-hidden="true"
      className="sc-EHOje dQOrnx tc-svg-icon tc-icon-name-talend-check-circle"
      focusable="false"
      name="talend-check-circle"
    />
  </span>
  <div
    className="tc-inline-message-text theme-tc-inline-message-text success theme-success background theme-background"
  >
    <span
      className="tc-inline-message-title theme-tc-inline-message-title tc-inline-message-text-item theme-tc-inline-message-text-item"
    >
      Validation title.
    </span>
    <span
      className="tc-inline-message-description theme-tc-inline-message-description tc-inline-message-text-item theme-tc-inline-message-text-item"
    >
      Validation and successful messages
    </span>
  </div>
</div>
`;

exports[`InlineMessage should render with icon and description 1`] = `
<div
  className="tc-inline-message theme-tc-inline-message"
>
  <span
    className="tc-inline-message-icon theme-tc-inline-message-icon success theme-success"
  >
    <svg
      aria-hidden="true"
      className="sc-EHOje dQOrnx tc-svg-icon tc-icon-name-talend-check-circle"
      focusable="false"
      name="talend-check-circle"
    />
  </span>
  <div
    className="tc-inline-message-text theme-tc-inline-message-text success theme-success"
  >
    
    <span
      className="tc-inline-message-description theme-tc-inline-message-description tc-inline-message-text-item theme-tc-inline-message-text-item"
    >
      Validation and successful messages
    </span>
  </div>
</div>
`;

exports[`InlineMessage should render with icon, title and description 1`] = `
<div
  className="tc-inline-message theme-tc-inline-message"
>
  <span
    className="tc-inline-message-icon theme-tc-inline-message-icon success theme-success"
  >
    <svg
      aria-hidden="true"
      className="sc-EHOje dQOrnx tc-svg-icon tc-icon-name-talend-check-circle"
      focusable="false"
      name="talend-check-circle"
    />
  </span>
  <div
    className="tc-inline-message-text theme-tc-inline-message-text success theme-success"
  >
    <span
      className="tc-inline-message-title theme-tc-inline-message-title tc-inline-message-text-item theme-tc-inline-message-text-item"
    >
      Validation title.
    </span>
    <span
      className="tc-inline-message-description theme-tc-inline-message-description tc-inline-message-text-item theme-tc-inline-message-text-item"
    >
      Validation and successful messages
    </span>
  </div>
</div>
`;

exports[`InlineMessage should render with icon, title, description and link 1`] = `
<div
  className="tc-inline-message theme-tc-inline-message"
>
  <span
    className="tc-inline-message-icon theme-tc-inline-message-icon success theme-success"
  >
    <svg
      aria-hidden="true"
      className="sc-EHOje dQOrnx tc-svg-icon tc-icon-name-talend-check-circle"
      focusable="false"
      name="talend-check-circle"
    />
  </span>
  <div
    className="tc-inline-message-text theme-tc-inline-message-text success theme-success"
  >
    <span
      className="tc-inline-message-title theme-tc-inline-message-title tc-inline-message-text-item theme-tc-inline-message-text-item"
    >
      Validation title.
    </span>
    <span
      className="tc-inline-message-description theme-tc-inline-message-description tc-inline-message-text-item theme-tc-inline-message-text-item"
    >
      Validation and successful messages
    </span>
    <a
      className="tc-inline-message-link theme-tc-inline-message-link"
      href="https://my.custom.link"
    >
      See more
    </a>
  </div>
</div>
`;

exports[`InlineMessage should render with title and description 1`] = `
<div
  className="tc-inline-message theme-tc-inline-message"
>
  <span
    className="tc-inline-message-icon theme-tc-inline-message-icon success theme-success"
  >
    <svg
      aria-hidden="true"
      className="sc-EHOje dQOrnx tc-svg-icon tc-icon-name-"
      focusable="false"
      name=""
    />
  </span>
  <div
    className="tc-inline-message-text theme-tc-inline-message-text success theme-success"
  >
    <span
      className="tc-inline-message-title theme-tc-inline-message-title tc-inline-message-text-item theme-tc-inline-message-text-item"
    >
      Validation title.
    </span>
    <span
      className="tc-inline-message-description theme-tc-inline-message-description tc-inline-message-text-item theme-tc-inline-message-text-item"
    >
      Validation and successful messages
    </span>
  </div>
</div>
`;
